# ft2

./: CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Procfile  README.md  deployment.yaml  diesel.toml
.github/workflows/: tests.yml
migrations/2020-06-24-202106_initial_models/: down.sql  up.sql
server/src/: main.rs
src/: main.rs  schema.rs
worker/: Cargo.toml
worker/src/: main.rs  schema.rs
