[package]
name = "worker"
version = "0.1.0"
authors = ["Teymour Aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
version="0.8.6"
features = ["framework", "standard_framework", "rustls_backend"]

[dependencies]
diesel={version="1", features=["postgres", "r2d2"]}
regex="1"
lazy_static = "1.4.0"
chrono-tz = "0.5"
chrono = "0.4.11"